Use the "DefaultSession" parameter in konsolerc. Thanks for the patch!

BUG: 126557

svn path=/branches/KDE/3.5/kdebase/konsole/; revision=536256